--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
@@ -5,7 +5,7 @@
     [home]="breadcrumbHome"
   ></p-breadcrumb>
   <div class="row justify-content-center align-items-center">
-    <div class="col-8 text-center ms-3 mb-5 h1card">
+    <div class="col-md-8 col-10 text-center mb-5 h1card">
       <h1>Portfolio Dashbooard</h1>
     </div>
 
@@ -13,7 +13,7 @@
       <section>
         <div class="row justify-content-evenly align-items-center">
           <!-- DONUT CHART -->
-          <div class="col-4 donutbackground">
+          <div class="col-md-4 col-11 donutbackground">
             <p-chart
               type="doughnut"
               [data]="donutData"
@@ -22,7 +22,7 @@
           </div>
 
           <!-- LINE CHART -->
-          <div class="col-7 linebackground g-2">
+          <div class="col-md-7 col-11 linebackground g-2">
             <div *ngIf="!skeletonLoading; else skeleton">
               <p-chart
                 type="line"
@@ -35,7 +35,7 @@
       </section>
 
       <!-- IMPORTANT TABLES -->
-      <section class="m-3">
+      <section class="my-3">
         <p-tabView>
           <!-- STOCKS -->
           <p-tabPanel>
@@ -48,15 +48,29 @@
               class="row justify-content-evenly align-items-center"
               id="unrealized-profit-row"
             >
-              <div class="col-10 d-flex justify-content-center h3-font">
-                <h2>
+              <div
+                class="col-md-10 col-11 d-flex justify-content-center h3-font"
+              >
+                <!-- Desktop view -->
+                <h2 class="d-none d-md-block">
                   Total Portfolio Value :
                   <span id="unrealized-market-value">
                     {{ totalStockMarketValue | currency : "USD" : "code" }}
                   </span>
                   <span id="dummy-unrealized-value">----</span>
                 </h2>
-                <span class="d-flex align-items-center ms-2">
+                <!-- Mobile view -->
+                <div class="d-md-none">
+                  <h5>
+                    Portfolio Value:
+                    <span id="unrealized-market-value">
+                      {{ totalStockMarketValue | currency : "USD" : "code" }}
+                    </span>
+                    <span id="dummy-unrealized-value">----</span>
+                  </h5>
+                </div>
+                <!-- Desktop view show, mobile view hide -->
+                <span class="d-flex align-items-center ms-2 d-none d-md-inline">
                   <p-button
                     id="show-icon"
                     icon="pi pi-eye"
@@ -72,8 +86,11 @@
                 </span>
               </div>
               <div class="row justify-content-evenly align-items-center">
-                <div class="col-10 d-flex justify-content-center h3-font">
-                  <h2>
+                <div
+                  class="col-md-10 col-11 d-flex justify-content-center h3-font"
+                >
+                  <!-- Desktop -->
+                  <h2 class="d-none d-md-block">
                     Unrealized P&L :
                     <span
                       id="unrealized-profit"
@@ -96,13 +113,36 @@
                     </span>
                     <span id="dummy-unrealized-profit"> ---- </span>
                   </h2>
+
+                  <!-- Mobile -->
+                  <div class="d-flex flex-column align-items-center">
+                    <h5 class="d-md-none">Unrealized P&L :</h5>
+                    <h5>
+                      <span
+                        id="unrealized-profit"
+                        class="fw-lighter"
+                        [className]="getProfitColorClass(unrealizedProfit)"
+                      >
+                        {{ unrealizedProfit | currency : "USD" : "code" }} (
+                        <span class="fw-lighter">
+                          {{
+                            unrealizedProfit /
+                              (totalStockMarketValue - unrealizedProfit)
+                              | percent : "1.2-2"
+                          }}
+                        </span>
+                        )
+                      </span>
+                      <span id="dummy-unrealized-profit"> ---- </span>
+                    </h5>
+                  </div>
                 </div>
               </div>
             </div>
 
             <!-- NOTE Tree Table-->
             <div
-              class="row justify-content-center align-items-center m-2 stock-card"
+              class="row justify-content-center align-items-center my-2 mx-1 stock-card"
             >
               <div class="col-12 d-flex justify-content-center h3-font">
                 <h3>Portfolio</h3>
@@ -233,6 +273,14 @@
                   </tr>
                 </ng-template>
                 <ng-template pTemplate="paginatorleft">
+                  <p-button
+                    class="d-md-block d-none"
+                    icon="pi pi-refresh"
+                    styleClass="p-button-text"
+                    (onClick)="refreshTreeTable()"
+                  ></p-button>
+                </ng-template>
+                <ng-template pTemplate="paginatorright">
                   <p-splitButton
                     icon="pi pi-download"
                     styleClass="p-button-text"
@@ -240,13 +288,6 @@
                     (onClick)="exportPdfPortfolio()"
                     [model]="portfolioExportBtnItems"
                   ></p-splitButton>
-                </ng-template>
-                <ng-template pTemplate="paginatorright">
-                  <p-button
-                    icon="pi pi-refresh"
-                    styleClass="p-button-text"
-                    (onClick)="refreshTreeTable()"
-                  ></p-button>
                 </ng-template>
               </p-treeTable>
             </div>
@@ -259,7 +300,7 @@
             </ng-template>
             <!-- PORTFOLIO TABLE -->
             <div
-              class="row justify-content-center align-items-center m-5 stock-card"
+              class="row justify-content-center align-items-center my-5 mx-1 stock-card"
             >
               <div class="col-12 d-flex justify-content-center h3-font">
                 <h3>Stock Transactions</h3>
@@ -279,7 +320,8 @@
                 [rowsPerPageOptions]="[5, 10, 15, 50, stocks.length]"
               >
                 <ng-template pTemplate="caption">
-                  <div class="d-flex justify-content-between">
+                  <!-- Desktop -->
+                  <div class="justify-content-between d-none d-md-flex">
                     <div>
                       <button
                         type="button"
@@ -328,6 +370,68 @@
                           pInputText
                           type="text"
                           (input)="dt1.filterGlobal(input1.value, 'contains')"
+                          placeholder="Search keyword"
+                        />
+                      </span>
+                    </div>
+                  </div>
+
+                  <!-- Mobile -->
+                  <div class="d-md-none">
+                    <div
+                      class="d-flex justify-content-evenly align-items-center"
+                    >
+                      <button
+                        type="button"
+                        pButton
+                        pRipple
+                        icon="pi pi-file"
+                        (click)="dt1.exportCSV()"
+                        class="export-buttons"
+                        pTooltip="CSV"
+                        tooltipPosition="bottom"
+                      ></button>
+                      <button
+                        type="button"
+                        pButton
+                        pRipple
+                        icon="pi pi-file-excel"
+                        (click)="exportExcelTransaction()"
+                        class="p-button-success export-buttons"
+                        pTooltip="XLS"
+                        tooltipPosition="bottom"
+                      ></button>
+                      <button
+                        type="button"
+                        pButton
+                        pRipple
+                        icon="pi pi-file-pdf"
+                        (click)="exportPdfTransaction()"
+                        class="p-button-danger export-buttons"
+                        pTooltip="PDF"
+                        tooltipPosition="bottom"
+                      ></button>
+                    </div>
+                    <div
+                      class="d-flex justify-content-center align-items-center mt-3"
+                    >
+                      <button
+                        pButton
+                        label="Clear"
+                        class="p-button-outlined"
+                        icon="pi pi-filter-slash"
+                        (click)="clear(dt1)"
+                      ></button>
+                      <span class="p-input-icon-left ml-auto">
+                        <i class="pi pi-search"></i>
+                        <input
+                          id="input1Mobile"
+                          #input1Mobile
+                          pInputText
+                          type="text"
+                          (input)="
+                            dt1.filterGlobal(input1Mobile.value, 'contains')
+                          "
                           placeholder="Search keyword"
                         />
                       </span>
@@ -423,6 +527,7 @@
                 </ng-template>
                 <ng-template pTemplate="paginatorleft">
                   <p-button
+                    class="d-none d-md-block"
                     type="button"
                     icon="pi pi-plus"
                     styleClass="p-button-text"
@@ -431,6 +536,7 @@
                 </ng-template>
                 <ng-template pTemplate="paginatorright">
                   <p-button
+                    class="d-none d-md-block"
                     type="button"
                     icon="pi pi-refresh"
                     styleClass="p-button-text"
@@ -479,9 +585,11 @@
                 </div>
               </div>
               <div
-                class="row justify-content-center align-items-center m-2 stock-card"
+                class="row justify-content-center align-items-center my-2 mx-1 stock-card"
               >
-                <div class="col-10 d-flex justify-content-center h3-font">
+                <div
+                  class="col-md-10 col-11 d-flex justify-content-center h3-font"
+                >
                   <h3>Sold Stocks Transactions</h3>
                 </div>
                 <p-table
@@ -500,7 +608,8 @@
                   [exportHeader]="'customExportHeader'"
                 >
                   <ng-template pTemplate="caption">
-                    <div class="d-flex justify-content-between">
+                    <!-- Desktop -->
+                    <div class="justify-content-between d-none d-md-flex">
                       <div>
                         <button
                           type="button"
@@ -549,6 +658,68 @@
                             pInputText
                             type="text"
                             (input)="dt2.filterGlobal(input2.value, 'contains')"
+                            placeholder="Search keyword"
+                          />
+                        </span>
+                      </div>
+                    </div>
+
+                    <!-- Mobile -->
+                    <div class="d-md-none">
+                      <div
+                        class="d-flex justify-content-evenly align-items-center mb-2"
+                      >
+                        <button
+                          type="button"
+                          pButton
+                          pRipple
+                          icon="pi pi-file"
+                          (click)="dt2.exportCSV()"
+                          class="export-buttons"
+                          pTooltip="CSV"
+                          tooltipPosition="bottom"
+                        ></button>
+                        <button
+                          type="button"
+                          pButton
+                          pRipple
+                          icon="pi pi-file-excel"
+                          (click)="exportExcelSoldStocks()"
+                          class="p-button-success export-buttons"
+                          pTooltip="XLS"
+                          tooltipPosition="bottom"
+                        ></button>
+                        <button
+                          type="button"
+                          pButton
+                          pRipple
+                          icon="pi pi-file-pdf"
+                          (click)="exportPdfSoldStocks()"
+                          class="p-button-danger export-buttons"
+                          pTooltip="PDF"
+                          tooltipPosition="bottom"
+                        ></button>
+                      </div>
+                      <div
+                        class="d-flex justify-content-center align-items-center"
+                      >
+                        <button
+                          pButton
+                          label="Clear"
+                          class="p-button-outlined"
+                          icon="pi pi-filter-slash"
+                          (click)="clear(dt2)"
+                        ></button>
+                        <span class="p-input-icon-left ml-auto">
+                          <i class="pi pi-search"></i>
+                          <input
+                            id="input2Mobile"
+                            #input2Mobile
+                            pInputText
+                            type="text"
+                            (input)="
+                              dt2.filterGlobal(input2Mobile.value, 'contains')
+                            "
                             placeholder="Search keyword"
                           />
                         </span>
@@ -628,6 +799,7 @@
                   </ng-template>
                   <ng-template pTemplate="paginatorleft">
                     <p-button
+                      class="d-none d-md-block"
                       type="button"
                       icon="pi pi-plus"
                       styleClass="p-button-text"
@@ -636,6 +808,7 @@
                   </ng-template>
                   <ng-template pTemplate="paginatorright">
                     <p-button
+                      class="d-none d-md-block"
                       type="button"
                       icon="pi pi-refresh"
                       styleClass="p-button-text"
@@ -655,12 +828,14 @@
 
             <div class="row justify-content-center stock-screener">
               <div class="col-10">
-                <i
-                  class="pi pi-info-circle"
-                  pTooltip="Due to limitation of API, max 8 calls per minute"
-                ></i>
-                <div class="d-flex flex-column m-4">
-                  <label htmlFor="symbol" class="mb-3">Ticker:</label>
+                <div class="d-flex flex-column m-4 pt-4">
+                  <label htmlFor="symbol" class="mb-3"
+                    ><i
+                      class="pi pi-info-circle"
+                      pTooltip="Due to limitation of API, max 8 calls per minute"
+                    ></i>
+                    Ticker:</label
+                  >
                   <p-autoComplete
                     [style]="{ width: '100%' }"
                     [inputStyle]="{ width: '100%' }"
