--- a/client/project/src/app/component/investment/investment.component.html
+++ b/client/project/src/app/component/investment/investment.component.html
@@ -5,7 +5,7 @@
     [home]="breadcrumbHome"
   ></p-breadcrumb>
   <div class="row justify-content-center align-items-center">
-    <div class="col-10 ncard">
+    <div class="col-md-10 col-11 ncard">
       <form [formGroup]="investmentForm" (submit)="addStock()">
         <i
           class="pi pi-info-circle"
