completed mobile responsive configuration

--- a/client/project/src/app/component/login/login.component.html
+++ b/client/project/src/app/component/login/login.component.html
@@ -78,6 +78,7 @@
     <div
       class="d-flex justify-content-center align-items-center d-none d-md-block"
     >
+      <!-- Desktop -->
       <h2>
         <span class="grey">We offer tools to manage </span
         ><span
@@ -98,7 +99,7 @@
         and etc.
       </h2>
     </div>
-
+    <!-- Mobile -->
     <div class="d-flex justify-content-center align-items-center d-md-none">
       <div>
         <h2 class="grey">We offer tools to manage</h2>
@@ -125,7 +126,7 @@
             >
           </span>
         </h2>
-        and etc.
+        <h2><span> and etc. </span></h2>
       </div>
     </div>
   </section>
