--- a/client/project/src/app/component/stock-details/stock-details.component.html
+++ b/client/project/src/app/component/stock-details/stock-details.component.html
@@ -200,7 +200,9 @@
 
 <ng-template #skeleton> <p-skeleton height="20rem"></p-skeleton></ng-template>
 <ng-template #loading>
-  <div class="d-flex justify-content-center align-items-center m-5">
+  <div
+    class="d-flex justify-content-center align-items-center m-5 loading-spinner"
+  >
     <p-progressSpinner
       styleClass="w-4rem h-4rem"
       strokeWidth="8"
