--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -16,6 +16,7 @@
         <div class="row justify-content-evenly align-items-center m-4">
           <div class="col-12 col-md-10 donutbackground">
             <div class="row justify-content-evenly align-items-center">
+              <!-- Mobile -->
               <div class="d-md-none col-12">
                 <p-chart
                   type="doughnut"
@@ -76,6 +77,7 @@
                   </div>
                 </div>
               </div>
+              <!-- Desktop -->
               <div class="d-none d-md-block col-md-3">
                 <p-chart
                   type="doughnut"
@@ -165,6 +167,7 @@
         >
           <div class="col-md-10 col-12 donutbackground">
             <div class="row justify-content-evenly align-items-center">
+              <!-- Mobile -->
               <div class="col-12 d-md-none">
                 <p-chart
                   type="doughnut"
@@ -247,6 +250,7 @@
                   </div>
                 </div>
               </div>
+              <!-- Desktop -->
               <div class="col-md-3 d-none d-md-block">
                 <p-chart
                   type="doughnut"
@@ -389,6 +393,7 @@
         class="ms-2 fs-4"
         type="number"
         inputmode="numeric"
+        placeholder="$100,000"
         formControlName="goal"
       />
     </form>
