--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
@@ -115,8 +115,8 @@
                   </h2>
 
                   <!-- Mobile -->
-                  <div class="d-flex flex-column align-items-center">
-                    <h5 class="d-md-none">Unrealized P&L :</h5>
+                  <div class="d-flex flex-column align-items-center d-md-none">
+                    <h5>Unrealized P&L :</h5>
                     <h5>
                       <span
                         id="unrealized-profit"
@@ -358,11 +358,11 @@
                       <button
                         pButton
                         label="Clear"
-                        class="p-button-outlined"
+                        class="p-button-outlined p-button-warning"
                         icon="pi pi-filter-slash"
                         (click)="clear(dt1)"
                       ></button>
-                      <span class="p-input-icon-left ml-auto">
+                      <span class="p-input-icon-left ms-2">
                         <i class="pi pi-search"></i>
                         <input
                           id="input1"
@@ -418,11 +418,11 @@
                       <button
                         pButton
                         label="Clear"
-                        class="p-button-outlined"
+                        class="p-button-outlined p-button-warning"
                         icon="pi pi-filter-slash"
                         (click)="clear(dt1)"
                       ></button>
-                      <span class="p-input-icon-left ml-auto">
+                      <span class="p-input-icon-left ms-2">
                         <i class="pi pi-search"></i>
                         <input
                           id="input1Mobile"
@@ -646,11 +646,11 @@
                         <button
                           pButton
                           label="Clear"
-                          class="p-button-outlined"
+                          class="p-button-outlined p-button-warning"
                           icon="pi pi-filter-slash"
                           (click)="clear(dt2)"
                         ></button>
-                        <span class="p-input-icon-left ml-auto">
+                        <span class="p-input-icon-left ms-2">
                           <i class="pi pi-search"></i>
                           <input
                             id="input2"
@@ -706,11 +706,11 @@
                         <button
                           pButton
                           label="Clear"
-                          class="p-button-outlined"
+                          class="p-button-outlined p-button-warning"
                           icon="pi pi-filter-slash"
                           (click)="clear(dt2)"
                         ></button>
-                        <span class="p-input-icon-left ml-auto">
+                        <span class="p-input-icon-left ms-2">
                           <i class="pi pi-search"></i>
                           <input
                             id="input2Mobile"
