--- a/client/project/src/app/component/investment/investment.component.html
+++ b/client/project/src/app/component/investment/investment.component.html
@@ -97,7 +97,7 @@
         </div>
 
         <div class="row justify-content-center align-items-center my-3">
-          <div class="col-9 text-center">
+          <div class="col-md-9 col-11 text-center">
             <span class="p-buttonset">
               <button
                 pButton
