--- a/client/project/src/app/component/mortgage-dashboard/mortgage-dashboard.component.html
+++ b/client/project/src/app/component/mortgage-dashboard/mortgage-dashboard.component.html
@@ -5,7 +5,7 @@
     [home]="breadcrumbHome"
   ></p-breadcrumb>
   <div class="row justify-content-center align-items-center">
-    <div class="col-8 text-center my-3 h1card">
+    <div class="col-md-8 col-11 text-center my-3 h1card">
       <h1>Mortgage Portfolio</h1>
     </div>
   </div>
