--- a/client/project/src/app/component/transaction-records/transaction-records.component.html
+++ b/client/project/src/app/component/transaction-records/transaction-records.component.html
@@ -25,7 +25,7 @@
         </div>
         <div class="mt-3 record-summary">
           <div class="row justify-content-center align-items-center">
-            <div class="col-4">
+            <div class="col-md-4 col-11">
               <div class="d-flex justify-content-between align-items-center">
                 <div>
                   <h4>Record type:</h4>
@@ -40,7 +40,7 @@
           </div>
           <div *ngIf="typeOfRecord() === 'all' || typeOfRecord() === 'income'">
             <div class="row justify-content-center align-items-center">
-              <div class="col-4">
+              <div class="col-md-4 col-11">
                 <div class="d-flex justify-content-between align-items-center">
                   <div>
                     <h4>Total Income:</h4>
@@ -56,7 +56,7 @@
           </div>
           <div *ngIf="typeOfRecord() === 'all' || typeOfRecord() === 'expense'">
             <div class="row justify-content-center align-items-center">
-              <div class="col-4">
+              <div class="col-md-4 col-11">
                 <div class="d-flex justify-content-between align-items-center">
                   <div>
                     <h4>Total Expense:</h4>
@@ -73,7 +73,7 @@
           </div>
           <div *ngIf="typeOfRecord() === 'all'">
             <div class="row justify-content-center align-items-center">
-              <div class="col-4">
+              <div class="col-md-4 col-11">
                 <div class="d-flex justify-content-between align-items-center">
                   <div>
                     <h4>Total Balance:</h4>
@@ -164,7 +164,7 @@
 
   <section *ngIf="transactions.length > 0; else noTransactionData">
     <div class="row justify-content-evenly align-items-center g-2">
-      <div class="col-4 donutbackground">
+      <div class="col-md-4 col-11 donutbackground">
         <div class="d-flex flex-row-reverse"></div>
         <p-chart
           type="doughnut"
@@ -173,7 +173,7 @@
           [plugins]="chartPlugin"
         ></p-chart>
       </div>
-      <div class="col-7 linebackground">
+      <div class="col-md-7 col-12 linebackground">
         <div *ngIf="!skeletonLoading; else skeleton">
           <p-chart
             type="bar"
@@ -236,11 +236,11 @@
               <button
                 pButton
                 label="Clear"
-                class="p-button-outlined"
+                class="p-button-outlined p-button-warning"
                 icon="pi pi-filter-slash"
                 (click)="clear(dt1)"
               ></button>
-              <span class="p-input-icon-left ml-auto">
+              <span class="p-input-icon-left ms-2">
                 <i class="pi pi-search"></i>
                 <input
                   id="input1"
