--- a/client/project/src/app/app.component.css
+++ b/client/project/src/app/app.component.css
@@ -123,7 +123,7 @@ footer {
   font-family: "Righteous", cursive;
 }
 
-.router-h3 > h3:hover {
+.router-h3 > div > h3:hover {
   cursor: pointer;
   transform: scale(1.03);
 }
